--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,11 @@
+
 <html>
 <head>
-<title>Yashwin<\title>
-<\head>
+<title>Yashwin</title> 
+</head>
 <body>
-
 <h1>
-This is my first website!! 
-<\h1>
-
-<\body>
-<\html>
+This is my first website!!
+</h1>
+</body> 
+</html>
